# kursach

./: Dockerfile  docker-compose.yml  pyproject.toml
app/: .env  init.json  main.py
app/app/: settings.py
app/utils/: init_db.py
